--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
       .btn, input, select { width: 350px; }
       .occupancy select { width: 165px; }
     }
+.header > * { width: 100%; text-align: center; }
+.container > * { max-width: 380px; width: 100%; margin-left: auto; margin-right: auto; }
+.nights { flex-wrap: wrap; justify-content: center; }
   </style>
 </head>
 <body>
