--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     body {
       font-family: 'Inter', sans-serif;
       body {
-  background: #000 url('img_0039.jpeg') center/cover no-repeat fixed; 
-  background-image: url('img_0039.jpeg'), linear-gradient(#000, #000); 
+  background: #000 url('IMG_0039.jpeg') center/cover no-repeat fixed; 
+  background-image: url('IMG_0039.jpeg'), linear-gradient(#000, #000); 
 }
       color: #fff;
       min-height: 100dvh;
