--- a/index.html
+++ b/index.html
@@ -274,20 +274,20 @@
 <script>
 document.addEventListener('DOMContentLoaded', () => {
   const PARISH_TOWNS = {
-    "clarendon": "May Pen (Capital)",
-    "hanover": "Lucea (Capital)",
-    "kingston": "Kingston (Town)",
-    "manchester": "Mandeville (Capital)",
-    "portland": "Port Antonio (Capital)",
+    "clarendon": "May Pen",
+    "hanover": "Lucea",
+    "kingston": "Kingston",
+    "manchester": "Mandeville",
+    "portland": "Port Antonio",
     "saint-andrew": "Half Way Tree",
     "saint-ann": "St. Ann’s Bay",
-    "saint-catherine": "Spanish Town (Capital)",
-    "saint-elizabeth": "Black River (Capital)",
-    "saint-james": "Montego Bay (MoBay)",
+    "saint-catherine": "Spanish Town",
+    "saint-elizabeth": "Black River" "Treasure Beach",
+    "saint-james": "Montego Bay",
     "saint-mary": "Port Maria",
     "saint-thomas": "Morant Bay",
     "trelawny": "Falmouth",
-    "westmoreland": "Savanna-la-Mar (Sav)"
+    "westmoreland": "Savanna-la-Mar"
   };
   const ALL_PARISHES = Object.keys(PARISH_TOWNS);
 
