--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     * { margin:0; padding:0; box-sizing:border-box; }
     body {
       font-family: 'Inter', sans-serif;
-      background: #000 url('/img_0039.jpeg') center/cover no-repeat fixed;
-      background-image: url('/img_0039.jpeg'), linear-gradient(180deg, #000 0%, #111 100%);
+      background: #000 url('/IMG_0039.jpeg') center/cover no-repeat fixed;
+      background-image: url('/IMG_0039.jpeg'), linear-gradient(180deg, #000 0%, #111 100%);
       color: #fff;
       min-height: 100dvh;
       overflow-x: hidden;
