--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ document.addEventListener('DOMContentLoaded', () => {
         const card = document.createElement('div');
         card.className = 'option-card';
         card.innerHTML = `
-          <img src="${item.img}" onerror="this.src='/img_0039.jpeg'" alt="${item.name}">
+          <img src="${item.img}" onerror="this.src='/IMG_0039.jpeg'" alt="${item.name}">
           <div class="info">
             <div class="name">${item.name}</div>
             <div class="price">$${item.price}${item.source === 'Tour' ? '' : '/night'}</div>
