--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   box-shadow: 0 2px 8px rgba(0,0,0,0.3);
 }
     @keyframes waveFlow {
-      0%, 100% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
+  0%, 100% { transform: rotate(0deg) scale(1); }
+  50% { transform: rotate(2deg) scale(1.02); }
     }
 
     .container {
