--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 .flag {
   position: fixed; top: 16px; left: 16px;
   width: 100px; height: 68px;
-  background: url('/flag1.png') center/cover no-repeat;
+  background: url('/IMG_0454.jpeg') center/cover no-repeat;
   animation: waveFlow 3s ease-in-out infinite;
   z-index: 10;
   border-radius: 4px;
