--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     body {
       font-family: 'Inter', sans-serif;
       background: #000 url('/IMG_0039.jpeg') center/cover no-repeat fixed;
-      background-image: url('/IMG_0039.jpeg'), linear-gradient(180deg, #000 0%, #111 100%);
+      background-image: url('/IMG_0039.jpeg'), background: linear-gradient(135deg, rgba(0,0,0,0.32), rgba(0,155,72,0.18));
       color: #fff;
       min-height: 100dvh;
       overflow-x: hidden;
